Fragment Layout setting & Fragment manager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_Programming"
+
         tools:targetApi="31">
+        <activity
+            android:name=".MarketInfoActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".LecutreActivity"
             android:exported="false">
@@ -32,6 +40,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity android:name=".Fragment.MarketInfo.MarketInfoActivity"></activity>
     </application>
 
 </manifest>
