--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+buildscript {
+
+    ext {
+        kotlin_version = '1.7.21'
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.14'
+    }
+    repositories {
+        mavenCentral()
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.0' apply false
     id 'com.android.library' version '7.3.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.21' apply false
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
