--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,15 +5,22 @@
 
     <application
         android:allowBackup="false"
-        android:fullBackupContent="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
-        tools:replace="android:allowBackup"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mobile_Programming"
-        tools:targetApi="31">
+        tools:replace="android:allowBackup"
+        tools:targetApi="33">
+        <activity
+            android:name=".WriteActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name="com.example.mobile_programming.Auth.JoinInfoActivity"
             android:exported="false">
@@ -43,7 +50,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name="com.example.mobile_programming.Fragment.MarketInfo.MarketInfoActivity"
+            android:name=".MarketInfoActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -69,6 +76,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
     </application>
+
 </manifest>
